--- a/.github/workflows/commitTest.yml
+++ b/.github/workflows/commitTest.yml
@@ -12,9 +12,9 @@ jobs:
       run: |
         echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
     - name: Set up JDK 17
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 17
+        java-version: '17'
     - name: Build mod jar
       run: ./gradlew deploy
     - name: Upload built jar file
