--- a/.github/workflows/commitTest.yml
+++ b/.github/workflows/commitTest.yml
@@ -1,24 +1,27 @@
 name: Commit Testing
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up PATH
-      run: |
-        echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
-    - name: Build mod jar
-      run: ./gradlew deploy
-    - name: Upload built jar file
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ github.event.repository.name }}
-        path: build/libs/${{ github.event.repository.name }}.jar
+      - uses: actions/checkout@v2
+      - name: Set up PATH
+        run: |
+          echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Build mod jar
+        run: ./gradlew deploy
+      - name: Upload built jar file
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ github.event.repository.name }}
+          path: build/libs/${{ github.event.repository.name }}.jar
