--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,5 @@
+# lore time
+
 blocks.reverence.name = Reverence
 blocks.reverence.description = A multipurpose turret used as close-range limited defense or long range superheavy artillery.
 blocks.reverence.details = The blueprints of the Reverence was created by Alexander Fosker during his stay on Dawne.
