--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,6 +3,9 @@
 blocks.reverence.name = Reverence
 blocks.reverence.description = A multipurpose turret used as close-range limited defense or long range superheavy artillery.
 blocks.reverence.details = The blueprints of the Reverence was created by Alexander Fosker during his stay on Dawne.
+blocks.venerate.name = Venerate
+blocks.venerate.description = A medium-range flak turret that is both effective at defense and offense.
+blocks.venerate.details = Attempts at loading the Venerate with potent explosive ammunitions may result in the turret combusting and exploding into a million pieces.
 blocks.fart.name = fart
 blocks.fart.description = Fires an enormous projectile of pure fresh solid feces with incredible power.
 blocks.fart.details = I am incredibly humorous.
@@ -12,10 +15,10 @@ blocks.flareMaterializer.description = A machine built from unknown technology t
 blocks.flareMaterializer.details = I must say, I am extremely curious to how this machine actually produces the item.
 blocks.susge-unifier.name = Susge Unifier
 blocks.susge-unifier.description = Unifies two items into one, the final product of this amalgamation may be a bit suspicious and untrustworthy. \n\nBeryllium is replaced with plastanium.
-blocks.susge-unifier.details = Hm. Vasil was right all along..
+blocks.susge-unifier.details = Perhaps, simply perhaps this was another work of Vasil?
 blocks.flarogus-integrator.name = Flarogus Integrator
 blocks.flarogus-integrator.description = Harmonizes the Flare material and the Susge Alloy to create the ultimate substance.
-blocks.flarogus-integrator.details = When Konev designed this, I wonder, what went in his head? What was the melody that he felt and heard where he would create a blueprint for such an irrational machine? I am beyond astonished that this machine functions.
+blocks.flarogus-integrator.details = When Konev designed this, I wonder, what went in his head? What was the melody that he felt and heard where he would create a blueprint for such an irrational yet elegant machine? I am still remarkably astonished that this actually functions.
 blocks.shit-hardener.name = shit hardener
 blocks.shit-hardener.description = Hardens pure feces fluid and turns it into fresh matter.
 blocks.shit-hardener.details = I am again, incredibly humorous.
@@ -25,14 +28,14 @@ item.flare-item.description = Created using the Flare Materializer, the Flare it
 item.flare-item.details = It looks like.. a Flare?
 item.susge-alloy.name = Susge Alloy
 item.susge-alloy.description = A more refined and pure variant of the standard manufactured Surge Alloy.
-item-susge-alloy.description = ..suspicious?
+item-susge-alloy.details = ..suspicious?
 item.flarogus-item.name = Flarogus
 item.flarogus-item.description = A far more advanced and refined version of the Flare item. It is also capable of multiple purposes but on a higher level and scale.
-item.flarogus-item.description = ..su-suspicious? Perhaps a bit mischievous.
+item.flarogus-item.details = ..su-suspicious? Perhaps a bit mischievous.
 
 liquid.diarrhea-juice.name = diarrhea juice
-liquid.diarrhea-juice.name = A fluid entirely comprised of impure liquid feces.
-liquid.diarrhea-juice.name = I must wonder whom this excrement belonged to.
+liquid.diarrhea-juice.description = A fluid entirely comprised of impure liquid feces.
+liquid.diarrhea-juice.details = I must wonder whom this excrement belonged to.
 
 status.flare-status.name = Flared
 status.flare-status.description = You have been flared.
